# ComfyUI-Widget-Notes

./: README.md  __init__.py  default_notes.json  pyproject.toml
.github/workflows/: publish.yml
js/: node_notes.js
